Внедрен bybit api в стретегию